--- a/html/main.html
+++ b/html/main.html
@@ -12,19 +12,19 @@
 
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="/img/img1.jpg" style="width:100%">
+            <img src="../img/img1.jpg" style="width:100%">
             <div class="text">Caption Text</div>
         </div>
   
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="/img/img2.jpg" style="width:100%">
+            <img src="../img/img2.jpg" style="width:100%">
             <div class="text">Caption Two</div>
         </div>
   
         <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
-            <img src="/img/img3.jpg" style="width:100%">
+            <img src="../img/img3.jpg" style="width:100%">
             <div class="text">Caption Three</div>
             </div>
   
