--- a/html/main.html
+++ b/html/main.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>EEEEEEEE</h1>
     <div class="slideshow-container">
 
-        <div class="mySlides fade">
-            <div class="numbertext">1 / 3</div>
+        <div class="m">
+            <div class="numbertext"> <p>1 / 3</p> </div>
             <img src="../img/img1.jpg" style="width:100%">
             <div class="text">Caption Text</div>
         </div>
