--- a/html/main.html
+++ b/html/main.html
@@ -8,36 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>EEEEEEEE</h1>
-    <div class="slideshow-container">
-
-        <div class="m">
-            <div class="numbertext"> <p>1 / 3</p> </div>
-            <img src="../img/img1.jpg" style="width:100%">
-            <div class="text">Caption Text</div>
-        </div>
-  
-        <div class="mySlides fade">
-            <div class="numbertext">2 / 3</div>
-            <img src="../img/img2.jpg" style="width:100%">
-            <div class="text">Caption Two</div>
-        </div>
-  
-        <div class="mySlides fade">
-            <div class="numbertext">3 / 3</div>
-            <img src="../img/img3.jpg" style="width:100%">
-            <div class="text">Caption Three</div>
-            </div>
-  
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-  <br>
-  
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-  </div>
+    <nav>
+        <ul>
+            <li><strong>Website</strong></li>
+            <li><a href="">Link 1</a></li>
+            <li><a href="">Link 2</a></li>
+            <li><a href="">Link 3</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
