--- a/html/main.html
+++ b/html/main.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><strong>Website</strong></li>
+            <li><a href="main.html"><strong>Website</strong></a></li>
             <li><a href="">Link 1</a></li>
             <li><a href="">Link 2</a></li>
             <li><a href="">Link 3</a></li>
