--- a/html/main.html
+++ b/html/main.html
@@ -10,11 +10,12 @@
 <body>
     <nav>
         <ul>
-            <li><a href="main.html"><strong>Website</strong></a></li>
-            <li><a href="">Link 1</a></li>
-            <li><a href="">Link 2</a></li>
+            <li class="nicht-animieren"><a href="main.html"><strong>Website</strong></a></li>
+            <li><a href="">Tägliche Angebote</a></li>
+            <li><a href="">Store</a></li>
             <li><a href="">Link 3</a></li>
         </ul>
+        <div id="w3sniff"></div>
     </nav>
 </body>
 </html>
