--- a/Main/main.html
+++ b/Main/main.html
@@ -11,60 +11,12 @@
     <nav>
         <ul>
             <li class="nicht-animieren"><a href="main.html"><strong>Dampf</strong></a></li>
-            <li><a href="store.html">Tägliche Angebote</a></li>
+            <li><a href="store_1.html">Tägliche Angebote</a></li>
             <li><a href="">Store</a></li>
             <li><a href="">Link 3</a></li>
         </ul>
     </nav>
 
-    <div class="game">
-        <img src="../img/img2.jpg" alt="Vorschaubild des Videospiels">
-        <div>
-            <h1>Titel</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, praesentium impedit! Soluta dolorem alias mollitia architecto? Pariatur illo, quibusdam, in quae accusantium consectetur quidem repellendus similique impedit eaque doloremque. Rerum.
-            </p>
 
-            <strong>PREIS: 23 €</strong>
-        </div>
-    </div>
-
-    <div class="game">
-        <img src="../img/img2.jpg" alt="Vorschaubild des Videospiels">
-        <div>
-            <h1>Titel</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, praesentium impedit! Soluta dolorem alias mollitia architecto? Pariatur illo, quibusdam, in quae accusantium consectetur quidem repellendus similique impedit eaque doloremque. Rerum.
-            </p>
-
-            <strong>PREIS: 23 €</strong>
-        </div>
-    </div>
-
-    <div class="game">
-        <img src="../img/img2.jpg" alt="Vorschaubild des Videospiels">
-        <div>
-            <h1>Titel</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, praesentium impedit! Soluta dolorem alias mollitia architecto? Pariatur illo, quibusdam, in quae accusantium consectetur quidem repellendus similique impedit eaque doloremque. Rerum.
-            </p>
-
-            <strong>PREIS: 23 €</strong>
-        </div>
-    </div>
-
-    <center>
-        <a href="store.html">
-            <button>&lt;&lt; Vorige Seite</button>
-        </a>
-
-        <strong>
-            Seite 1
-        </strong>
-
-        <a href="store_3.html">
-            <button>Nächste Seite &gt;&gt;</button>
-        </a>
-    </center>
 </body>
 </html>
