--- a/Main/store_1.html
+++ b/Main/store_1.html
@@ -11,8 +11,8 @@
     <nav>
         <ul>
             <li class="nicht-animieren"><a href="main.html"><strong>Dampf</strong></a></li>
-            <li><a href="store_1.html">Tägliche Angebote</a></li>
-            <li><a href="">Store</a></li>
+            <li><a href="">Tägliche Angebote</a></li>
+            <li><a href="store_1.html">Store</a></li>
             <li><a href="">Link 3</a></li>
         </ul>
     </nav>
