--- a/Main/store_2.html
+++ b/Main/store_2.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li class="nicht-animieren"><a href="main.html"><strong>Dampf</strong></a></li>
+            <li><a href="">Tägliche Angebote</a></li>
+            <li><a href="store_1.html">Store</a></li>
+            <li><a href="">Link 3</a></li>
+        </ul>
+    </nav>
     <div class="game">
         <img src="../img/img2.jpg" alt="Vorschaubild des Videospiels">
         <div>
