--- a/Main/store_2.html
+++ b/Main/store_2.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li class="nicht-animieren"><a href="main.html"><strong>Dampf</strong></a></li>
+            <li class="nicht-animieren"><a href="main.html"><strong>Epische Spiele</strong></a></li>
             <li><a href="">Tägliche Angebote</a></li>
             <li><a href="store_1.html">Store</a></li>
             <li><a href="">Link 3</a></li>
