--- a/Main/store_2.html
+++ b/Main/store_2.html
@@ -16,6 +16,9 @@
             <li><a href="">Link 3</a></li>
         </ul>
     </nav>
+    <div class="padder">
+        
+    </div>
     <div class="game">
         <img src="../img/img2.jpg" alt="Vorschaubild des Videospiels">
         <div>
