--- a/Main/store_2.html
+++ b/Main/store_2.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
+    <nav class="topnav">
         <ul>
             <li class="nicht-animieren"><a href="main.html"><strong>Epische Spiele</strong></a></li>
             <li><a href="">Tägliche Angebote</a></li>
