--- a/Main/main.html
+++ b/Main/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <nav class="topnav">
         <ul>
             <li class="nicht-animieren"><a href="main.html"><strong>Epische Spiele</strong></a></li>
             <li><a href="">Tägliche Angebote</a></li>
@@ -16,7 +16,6 @@
             <li><a href="">Link 3</a></li>
         </ul>
     </nav>
-
-    <div class="game"></div>
+Herzlich Willkommen bei Epische Spiele! Die besten Spiele Weltweit billig kopiert teuer kaufen!
 </body>
 </html>
