--- a/Main/main.html
+++ b/Main/main.html
@@ -10,7 +10,9 @@
 <body>
     <nav class="topnav">
         <ul>
-            <li class="nicht-animieren"><a href="main.html"><strong>Epische Spiele</strong></a></li>
+            <li class="nicht-animieren"><a href="main.html">
+                <img src="../img/Epischespielelogo.png">
+            </a></li>
             <li><a href="taegliche_angebote.html">Tägliche Angebote</a></li>
             <li><a href="store_1.html">Store</a></li>
             <li><a href="">Link 3</a></li>
