--- a/Main/main.html
+++ b/Main/main.html
@@ -16,8 +16,9 @@
             <li><a href="taegliche_angebote.html">Tägliche Angebote</a></li>
             <li><a href="store_1.html">Store</a></li>
             <li><a href="">Link 3</a></li>
+            <li class="download"><a href="">
+                <img src="../img/25607-5-download-now-button-glossy-red.png">
         </ul>
     </nav>
-Herzlich Willkommen bei Epische Spiele! Die besten Spiele Weltweit billig kopiert teuer kaufen!
 </body>
 </html>
