--- a/Main/store_1.html
+++ b/Main/store_1.html
@@ -15,7 +15,7 @@
             </a></li>
             <li><a href="taegliche_angebote.html">Tägliche Angebote</a></li>
             <li><a href="store_1.html">Store</a></li>
-            <li><a href="">Link 3</a></li>
+            <li><a href="" download="../img/Screenshot-2023-05-10-at-13-18-26-Goofy-ahh-sounds-YouTube1.jpg">Link 3</a></li>
         </ul>
     </nav>
     <div class="padder">
