--- a/Main/bild.html
+++ b/Main/bild.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href="main.html">
+    <img class="goofy" src="../img/Screenshot-2023-05-10-at-13-18-26-Goofy-ahh-sounds-YouTube1.jpg">
+    </a>
+    <p>Your computer has virus</p>
 </body>
 </html>
