--- a/Main/Kontakt.html
+++ b/Main/Kontakt.html
@@ -17,8 +17,35 @@
             <li><a href="store_1.html">Store</a></li>
             <li><a href="Kontakt.html">Kontakt</a></li>
             <li class="download"><a href="bild.html">
-                <img src="../img/25607-5-download-now-button-glossy-red.png">
+                <img src="../img/25607-5-download-now-button-glossy-red.png"></a></li>
         </ul>
     </nav>
+    
+    <div class="Kontakt">
+        <title> Kontaktdaten</title>
+        <style>
+         ul {
+            list-style-type: none;
+            padding: 0;
+            }
+  
+        li {
+            margin-bottom: 10px;
+            }
+  
+        strong {
+           display: inline-block;
+            width: 100px;
+            }
+        </style>
+    <h1>Kontaktdaten</h1>
+    
+    <ul>
+      <li><strong>Firma:</strong> Beispiel GmbH</li>
+      <li><strong>Adresse:</strong> Musterstraße 123, 12345 Musterstadt</li>
+      <li><strong>Telefon:</strong> +49 123 456789</li>
+      <li><strong>E-Mail:</strong> info@beispiel.com</li>
+      <li><strong>Website:</strong> <a href="https://www.beispiel.com">www.beispiel.com</a></li>
+    </div>
 </body>
 </html>
