--- a/Main/store_1.html
+++ b/Main/store_1.html
@@ -29,7 +29,7 @@
     <div class="game">
         <img src="../img/Ueberwachung2.jpg" t="Vorschaubild des Videospiels">
         <div>
-            <h1>Überwachung 2</h1>
+            <h1>Überwachung 2 <span class="badge">Neu</span> </h1> 
             <p>
                 Trete in epischen 5 gegen 5 Kämpfen gegen deine Gegner an. Steige in den Rängen auf und werde der beste!
             </p>
