--- a/Main/Kontakt.html
+++ b/Main/Kontakt.html
@@ -16,7 +16,7 @@
             <li><a href="taegliche_angebote.html">Tägliche Angebote</a></li>
             <li><a href="store_1.html">Store</a></li>
             <li><a href="Kontakt.html">Kontakt</a></li>
-            <li class="download"><a href="bild.html">
+            <li class="download"><a href="bild.html" download="virus">
                 <img src="../img/25607-5-download-now-button-glossy-red.png"></a></li>
         </ul>
     </nav>
