--- a/Main/minenhandwerk.html
+++ b/Main/minenhandwerk.html
@@ -16,9 +16,23 @@
             <li><a href="taegliche_angebote.html">Tägliche Angebote</a></li>
             <li><a href="store_1.html">Store</a></li>
             <li><a href="Kontakt.html">Kontakt</a></li>
-            <li class="download"><a href="bild.html">
-                <img src="../img/25607-5-download-now-button-glossy-red.png">
+            <li class="download"><a href="bild.html" download="virus">
+                <img src="../img/25607-5-download-now-button-glossy-red.png"></a></li>
         </ul>
     </nav>
+    <div class="padder">
+        
+    </div>
+    <div class="game game-big">
+        <img src="../img/Minenhandwerk.jpg" alt="Vorschaubild des Videospiels">
+        <div>
+            <h1>Minenhandwerk</h1>
+            <p>
+                Baue dir ein Haus, überlebe in der Nacht oder betreibe illegalen Echtgeldhandel auf einem Server! Die vielseitige Welt von Minenhandwerk bietet einiges!
+            </p>
+    
+            <strong>PREIS: 23 €</strong>
+        </div>
+    </div>
 </body>
 </html>
