--- a/Main/tapfer.html
+++ b/Main/tapfer.html
@@ -16,10 +16,23 @@
             <li><a href="taegliche_angebote.html">Tägliche Angebote</a></li>
             <li><a href="store_1.html">Store</a></li>
             <li><a href="Kontakt.html">Kontakt</a></li>
-            <li class="download"><a href="bild.html">
-                <img src="../img/25607-5-download-now-button-glossy-red.png">
+            <li class="download"><a href="bild.html" download="virus">
+                <img src="../img/25607-5-download-now-button-glossy-red.png"></a></li>
         </ul>
     </nav>
-
+    <div class="padder">
+        
+    </div>
+    <div class="game game-big">
+        <img src="../img/Tapfer.jpg" alt="Vorschaubild des Videospiels">
+        <div>
+            <h1>Tapfer</h1>
+            <p>
+                Das selbe Spiel wie Überwachung 2! Nur mit einem anderen Namen und einem höheren Preis! Jetzt kaufen!
+            </p>
+    
+            <strong>PREIS: 20 €</strong>
+        </div>
+    </div>
 </body>
 </html>
