--- a/Main/ueberwachung2.html
+++ b/Main/ueberwachung2.html
@@ -16,10 +16,23 @@
             <li><a href="taegliche_angebote.html">Tägliche Angebote</a></li>
             <li><a href="store_1.html">Store</a></li>
             <li><a href="Kontakt.html">Kontakt</a></li>
-            <li class="download"><a href="bild.html">
-                <img src="../img/25607-5-download-now-button-glossy-red.png">
+            <li class="download"><a href="bild.html" download="virus">
+                <img src="../img/25607-5-download-now-button-glossy-red.png"></a></li>
         </ul>
     </nav>
-
+    <div class="padder">
+        
+    </div>
+    <div class="game game-big">
+        <img src="../img/Ueberwachung2.jpg" alt="Vorschaubild des Videospiels">
+        <div>
+            <h1>Überwachung 2 <span class="badge">Neu</span> </h1> 
+            <p>
+                Trete in epischen 5 gegen 5 Kämpfen gegen deine Gegner an. Steige in den Rängen auf und werde der beste!
+            </p>
+    
+            <strong>PREIS: 5 €</strong>
+        </div>
+    </div>
 </body>
 </html>
