--- a/Main/gegenschlagglobaluebergreifendeoffensive.html
+++ b/Main/gegenschlagglobaluebergreifendeoffensive.html
@@ -16,9 +16,21 @@
             <li><a href="taegliche_angebote.html">Tägliche Angebote</a></li>
             <li><a href="store_1.html">Store</a></li>
             <li><a href="Kontakt.html">Kontakt</a></li>
-            <li class="download"><a href="bild.html">
-                <img src="../img/25607-5-download-now-button-glossy-red.png">
+            <li class="download"><a href="bild.html" download="virus">
+                <img src="../img/25607-5-download-now-button-glossy-red.png"></a></li>
         </ul>
     </nav>
+    <div class="padder">
+        
+    </div>
+    <img src="../img/gegenschlagglobaleuebergreifendeoffensive.jpg" alt="Vorschaubild des Videospiels">
+    <div>
+        <h1>Gegenschlag: Global übergreifende Offensive</h1>
+        <p>
+            Wie Überwachung und Tapfer, nur realistisch.
+        </p>
+        <strong>PREIS: 23 €</strong>
+    </div>
+    <div class="game game-big"></div>
 </body>
 </html>
