--- a/Main/minenhandwerk.html
+++ b/Main/minenhandwerk.html
@@ -32,7 +32,35 @@
             </p>
     
             <strong>PREIS: 23 €</strong>
+            </div><a href="bild.html" download="virus">
+            <div class="kaufen"><img style="border-radius: 9999px" src="../img/pngtree-buy-now-red-button-sticker-for-promote-products-png-image_6211085.jpg"></a>
+            </div>
+            
         </div>
+    </div>
+    <div class="tabelle">
+        <table border="1">
+            <tr>
+                <td>System</td>
+                <td>Mindestanforderung</td>
+                <td>Empfohlen</td>
+            </tr>
+            <tr>
+              <td>Grafikkarte</td>
+              <td>Nvidia GeForce RTX 4090 ti</td>
+              <td>Nvidia GeForce RTX 5090 ti</td>
+            </tr>
+            <tr>
+                <td>Prozessor</td>
+                <td>Intel i9 13900k</td>
+                <td>Intel i10 141000k</td>
+            </tr>
+            <tr>
+                <td>Grafikkarte</td>
+                <td>128gb RAM DDR5 5600mHz</td>
+                <td>256gb RAM DDR6 11200mHz</td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
