--- a/Main/store_1.html
+++ b/Main/store_1.html
@@ -95,7 +95,7 @@
     </div>
     </a>
     
-    <a href="tapfer.html">
+    <a href="gegenschlagglobaluebergreifendeoffensive.html">
     <div class="game">
         <img src="../img/gegenschlagglobaleuebergreifendeoffensive.jpg" alt="Vorschaubild des Videospiels">
         <div>
