--- a/Main/Kontakt.html
+++ b/Main/Kontakt.html
@@ -20,6 +20,20 @@
                 <img src="../img/25607-5-download-now-button-glossy-red.png"></a></li>
         </ul>
     </nav>
-    
+    <div class="game game-big">
+        <div>
+            <h1>Kontakt</h1>
+            <p>
+               totallynotavirus@epischespiele.de
+               epischespiele.de 
+               Bajeed Hakame
+               +91 (11) 6646-5500
+               Regional Office Bangladesh, Bhutan, India, Nepal, Sri Lanka
+            c/o DLTA Complex, R.K. Khanna Stadium, 1 Africa Avenue
+            110029 New Delhi
+            Indien
+            </p>
+        </div>
+    </div>
 </body>
 </html>
