--- a/Main/main.html
+++ b/Main/main.html
@@ -20,5 +20,21 @@
                 <img src="../img/25607-5-download-now-button-glossy-red.png"></a></li>
         </ul>
     </nav>
+    <div class="game game-big">
+        <div>
+            <h1>Willkommen</h1>
+            <p>
+                Herzlich Willkommen bei Epischespiele.de ihr Seriöser Online-Spieleladen! Auf gar keinen Fall ein Virus! WIRKLICH
+            </p>
+        </div>
+    </div>
+    <div class="game game-big">
+        <div>
+            <h1>Store</h1>
+            <p>
+                Gehen sie auf Store um ihr Spiel zu kaufen und downloaden sie gerne den Store als Desktop-App
+            </p>
+        </div>
+    </div>
 </body>
 </html>
