--- a/Main/taegliche_angebote.html
+++ b/Main/taegliche_angebote.html
@@ -22,7 +22,7 @@
     </nav>
     <section class="games">
       
-        <a href="../games/tapfer.html">
+        <a href="tapfer.html">
             <div class="dailygame">
                 <img src="../img/Tapfer.jpg" alt="Vorschaubild des Videospiels">
                 <div>
